testing diffrent consoles like info or error

--- a/dev tools fun/index.html
+++ b/dev tools fun/index.html
@@ -18,7 +18,7 @@
     }
 
     // Regular
-
+console.log(dogs)
     // Interpolated
 
     // Styled
@@ -26,9 +26,13 @@
     // warning!
 
     // Error :|
-
+console.error('something doesnt work proply ')
     // Info
 
+    var car = "Dodge Charger";
+var someObject = {str:"Some text", id:5};
+console.info("My first car was a", car, ". The object is: ", someObject);
+console.info('this is info log ')
     // Testing
 
     // clearing
