add debounce function to the event

--- a/13 - Slide in on Scroll/index-START.html
+++ b/13 - Slide in on Scroll/index-START.html
@@ -202,7 +202,7 @@
     }
 
 
-    window.addEventListener('scroll', checkImage);
+    window.addEventListener('scroll', debounce(checkImage));
   </script>
 
   <style>
