--- a/16 - Mouse Move Shadow/index-START.html
+++ b/16 - Mouse Move Shadow/index-START.html
@@ -37,14 +37,28 @@
 <script>
   const hero = document.querySelector('.hero');
   const text = hero.querySelector('h1');
+  const move = 500;
 
 function shadow(e){
   const {offsetWidth: width, offsetHeight: height} = hero
   let {offsetX: x, offsetY: y} = e;
-  console.log(width, height, x, y,this, e.target)
+  // console.log(width, height, x, y,this, e.target)
   if(this !== e.target){
-    console.log(e.target.offsetLeft, e.target.offsetTop)
+    // console.log(x,e.target.offsetLeft, x+e.target.offsetLeft, e.target.offsetTop)
+    x= x+ e.target.offsetLeft;
+    y = y + e.target.offsetTop;
   }
+  const xWalk = Math.round((x / width * move) - (move / 2));
+  const yWalk = Math.round((y / height * move) - (move / 2));
+  // console.log(xMove, yMove)
+  text.style.textShadow = `
+  ${xWalk}px ${yWalk}px 0 red,
+      ${xWalk * -1}px ${yWalk}px 0 blue,
+      ${yWalk}px ${xWalk * -1}px 0 green,
+      ${yWalk * -1}px ${xWalk}px 0 yellow
+ 
+  
+  `
 }
 
   hero.addEventListener('mousemove', shadow)
