save speed recognition to variable and start it

--- a/20 - Speech Detection/index-START.html
+++ b/20 - Speech Detection/index-START.html
@@ -12,7 +12,32 @@
 <script>
   window.SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
 
+const recognition = new SpeechRecognition();
+recognition.interimResults = true;
 
+let p = document.createElement('p');
+const words = document.querySelector('.words');
+words.appendChild(p);
+
+recognition.addEventListener('result', e=> {
+
+  console.log(e);
+})
+recognition.start()
+
+//  const recogniztion = new SpeechRecognition();
+// recogniztion.interimResults = true;
+// recogniztion.lang = 'en-US';
+//  console.log(recogniztion)
+
+ 
+//  const recognition = new SpeechRecognition();
+//   recognition.interimResults = true;
+//   recognition.lang = 'en-US';
+
+//   recognition.addEventListener('result', e => {
+//     console.log(e)
+//   })
 </script>
 
 
