--- a/22 - Follow Along Link Highlighter/index-START.html
+++ b/22 - Follow Along Link Highlighter/index-START.html
@@ -35,6 +35,11 @@
 
     function highlightslinks() {
       console.log(this)
+      const linkCoords = this.getBoundingClientRect();
+      console.log(linkCoords)
+      highlight.style.width = `${linkCoords.width}px`
+      highlight.style.height = `${linkCoords.height}px`;
+      
     }
 
     triggers.forEach(a => a.addEventListener('mouseenter', highlightslinks));
