finish folow along link challange

--- a/20 - Speech Detection/index-START.html
+++ b/20 - Speech Detection/index-START.html
@@ -21,7 +21,7 @@ words.appendChild(p);
 
 recognition.addEventListener('result', e=> {
 
-  console.log(e);
+  console.log(e.results);
 })
 recognition.start()
 
