--- a/22 - Follow Along Link Highlighter/index-START.html
+++ b/22 - Follow Along Link Highlighter/index-START.html
@@ -36,9 +36,16 @@
     function highlightslinks() {
       console.log(this)
       const linkCoords = this.getBoundingClientRect();
+      const coords = {
+      width: linkCoords.width,
+      height: linkCoords.height,
+      top: linkCoords.top + window.scrollY,
+      left: linkCoords.left + window.scrollX
+    };
       console.log(linkCoords)
-      highlight.style.width = `${linkCoords.width}px`
-      highlight.style.height = `${linkCoords.height}px`;
+      highlight.style.width = `${coords.width}px`
+      highlight.style.height = `${coords.height}px`;
+      highlight.style.transform = `translate(${coords.left}px, ${coords.top}px)`
       
     }
 
