--- a/23 - Speech Synthesis/index-START.html
+++ b/23 - Speech Synthesis/index-START.html
@@ -22,7 +22,7 @@
       <label for="pitch">Pitch:</label>
 
       <input name="pitch" type="range" min="0" max="2" step="0.1">
-      <textarea name="text">Hello! I love JavaScript 👍</textarea>
+      <textarea name="text">Hello! I love sex 👍</textarea>
       <button id="stop">Stop!</button>
       <button id="speak">Speak</button>
 
@@ -42,10 +42,29 @@
   function populateVoiced() {
     voices = this.getVoices();
     
-    voicesDropdown.innerHTML = voices.map( voice => `<option value="${voice.name}"> ${voice.name} ${voice.lang} </option>`).join('')
-    console.log(voices.map( voice => `<option value="${voice.name}"> ${voice.name} ${voice.lang} </option>`).join(''))
+    const options = voices.map( voice => `<option value="${voice.name}"> ${voice.name} ${voice.lang} </option>`).join('')
+    voicesDropdown.innerHTML = options;
+    // console.log(options)
+    // console.log(voices.map( voice => `<option value="${voice.name}"> ${voice.name} ${voice.lang} </option>`).join('')) 
   }
-  speechSynthesis.addEventListener('voicechanged', populateVoiced)
+  function setVoice(){
+
+    msg.voice = voices.find(voice => voice.name === this.value);
+    toggle();
+    console.log(this.value, 'ok')
+
+
+  }
+
+  function toggle(){
+    speechSynthesis.speak(msg);
+  }
+  speechSynthesis.addEventListener('voiceschanged', populateVoiced);
+  speakButton.addEventListener('click', toggle);
+  voicesDropdown.addEventListener('change', setVoice);
+  // options.forEach(option => option.addEventListener('change', setVoices))
+  
+
 </script>
 
 </body>
