get elements and create to function to enter and leave element

--- a/26 - Stripe Follow Along Nav/index-START.html
+++ b/26 - Stripe Follow Along Nav/index-START.html
@@ -220,6 +220,27 @@
 </style>
 
 <script>
+const triggers = document.querySelectorAll('.cool > li');
+const background = document.querySelector('.dropdownBackground');
+const nav = document.querySelector('.top');
+
+function handleEnter(){
+  console.log('E',this)
+  
+  this.classList.add('trigger-enter', 'trigger-enter-active');
+  // setTimeout(() => this.classList.add('trigger-enter-active'), 150)
+  
+}
+
+function handleLeave(){
+  console.log('leave')
+  this.classList.remove('trigger-enter', 'trigger-enter-active');
+
+}
+
+triggers.forEach(trig => trig.addEventListener('mouseenter', handleEnter))
+triggers.forEach(trig => trig.addEventListener('mouseleave', handleLeave))
+
 </script>
 
 </body>
