add background class

--- a/26 - Stripe Follow Along Nav/index-START.html
+++ b/26 - Stripe Follow Along Nav/index-START.html
@@ -229,12 +229,15 @@ function handleEnter(){
   
   this.classList.add('trigger-enter', 'trigger-enter-active');
   // setTimeout(() => this.classList.add('trigger-enter-active'), 150)
-  
+  background.classList.add('open')
+  const dropdown = this.querySelector('.dropdown')
+  console.log(dropdown)
 }
 
 function handleLeave(){
   console.log('leave')
   this.classList.remove('trigger-enter', 'trigger-enter-active');
+  background.classList.remove('open')
 
 }
 
